tester/testsuite/extensions/objects1/bad/bad007.jl
class A {
    int x;
}

int main() {
    A a = new A;
    a.x = 0;
    return 1;
}
